--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,10 +1,12 @@
 ---
 # defaults file for kostyrevaa.koji-client
 # defaults for /etc/koji.conf
+koji_client_ssl: true
+koji_client_url_prefix: "{{ 'https://' if koji_client_ssl == true else 'http://' }}"
 koji_client_server: http://{{ hostvars[groups['koji_hub'][0]]['inventory_hostname'] }}/kojihub
-koji_client_topurl: http://{{ hostvars[groups['koji_hub'][0]]['inventory_hostname'] }}/kojifiles
+koji_client_topurl: "{{ koji_client_url_prefix }}{{ hostvars[groups['koji_hub'][0]]['inventory_hostname'] }}/kojifiles"
 koji_client_cert: ~/.koji/client.crt
 koji_client_ca: ~/.koji/clientca.crt
 koji_client_serverca: ~/.koji/serverca.crt
-koji_client_KojiWebURL: http://{{ hostvars[groups['koji_web'][0]]['inventory_hostname'] }}/koji
+koji_client_KojiWebURL: "{{ koji_client_url_prefix }}{{ hostvars[groups['koji_web'][0]]['inventory_hostname'] }}/koji"
 koji_client_KojiDir: /mnt/koji
