--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 # defaults file for kostyrevaa.koji-client
-koji_package: koji-1.10.1-1.el7.centos
+koji_package: koji
 
 # defaults for /etc/koji.conf
 koji_client_ssl: true
