--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,6 +2,7 @@
 # defaults file for kostyrevaa.koji-client
 koji_package: koji
 
+koji_client_package_only: False
 # defaults for /etc/koji.conf
 koji_client_ssl: true
 koji_client_url_prefix: "{{ 'https://' if koji_client_ssl == true else 'http://' }}"
